# testOpenRTMSerializer

./: README.md  rtc_ros.conf  rtc_ros2.conf
TestRos2Serializer/: TestRos2Serializer.cpp
TestRosSerializer/: CMakeLists.txt  TestRosSerializer.cpp
testVelocity3DIn/: .appveyor.yml  .project  CMakeLists.txt  README.md  RTC.xml  RTC.xml20221108130449  rtc.conf  testVelocity3DIn.conf
testVelocity3DIn/cmake/: testvelocity3din-config.cmake.in
testVelocity3DIn/doc/: conf.py.in
testVelocity3DIn/include/: CMakeLists.txt
testVelocity3DIn/include/testVelocity3DIn/: CMakeLists.txt  testVelocity3DIn.h
testVelocity3DIn/scripts/ubuntu_1604/: Dockerfile
testVelocity3DIn/scripts/ubuntu_1804/: Dockerfile
testVelocity3DIn/src/: CMakeLists.txt  testVelocity3DIn.cpp  testVelocity3DInComp.cpp
testVelocity3DIn/test/include/: CMakeLists.txt
testVelocity3DIn/test/src/: CMakeLists.txt  testVelocity3DInTest.cpp  testVelocity3DInTestComp.cpp
testVelocity3DOut/: .appveyor.yml  .project  CMakeLists.txt  README.md  README.md20221108133448  RTC.xml  RTC.xml20221108130347  RTC.xml20221108133450  rtc.conf  testVelocity3DOut.conf
testVelocity3DOut/cmake/: testvelocity3dout-config.cmake.in
testVelocity3DOut/doc/: conf.py.in
testVelocity3DOut/include/: CMakeLists.txt
testVelocity3DOut/include/testVelocity3DOut/: CMakeLists.txt  testVelocity3DOut.h  testVelocity3DOut.h20221108133445
testVelocity3DOut/scripts/ubuntu_1604/: Dockerfile
testVelocity3DOut/src/: CMakeLists.txt  testVelocity3DOut.cpp  testVelocity3DOut.cpp20221108133446  testVelocity3DOutComp.cpp
(+11 files in other folders)
